@@ -1,18 +1,17 @@
 package io.github.steaf23.bingoreloaded.gui.creator;
 
 import io.github.steaf23.bingoreloaded.data.BingoCardData;
-import io.github.steaf23.bingoreloaded.gui.base.FilterType;
-import io.github.steaf23.bingoreloaded.gui.base.MenuItem;
-import io.github.steaf23.bingoreloaded.gui.base.MenuManager;
-import io.github.steaf23.bingoreloaded.gui.base.PaginatedSelectionMenu;
-import io.github.steaf23.bingoreloaded.item.ItemText;
 import io.github.steaf23.bingoreloaded.tasks.BingoTask;
 import io.github.steaf23.bingoreloaded.tasks.CountableTask;
 import io.github.steaf23.bingoreloaded.tasks.TaskData;
+import io.github.steaf23.easymenulib.menu.FilterType;
+import io.github.steaf23.easymenulib.menu.MenuBoard;
+import io.github.steaf23.easymenulib.menu.PaginatedSelectionMenu;
+import io.github.steaf23.easymenulib.menu.item.ItemText;
+import io.github.steaf23.easymenulib.menu.item.MenuItem;
 import net.md_5.bungee.api.ChatColor;
 import org.bukkit.entity.HumanEntity;
 import org.bukkit.event.inventory.InventoryClickEvent;
-import org.bukkit.inventory.ItemStack;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -27,7 +26,7 @@ public class TaskPickerMenu extends PaginatedSelectionMenu
     protected static final ItemText[] SELECTED_LORE = createSelectedLore();
     protected static final ItemText[] UNSELECTED_LORE = createUnselectedLore();
 
-    public TaskPickerMenu(MenuManager manager, String title, List<BingoTask> options, String listName) {
+    public TaskPickerMenu(MenuBoard manager, String title, List<BingoTask> options, String listName) {
         super(manager, title, asPickerItems(options), FilterType.DISPLAY_NAME);
         this.listName = listName;
         this.setMaxStackSizeOverride(64);
@@ -55,8 +54,8 @@ public class TaskPickerMenu extends PaginatedSelectionMenu
                 return null;
         }
 
-        TaskData newData = BingoTask.fromStack(item).data;
-        MenuItem newItem = new MenuItem(getUpdatedTaskItem(newData, true, newAmount))
+        TaskData newData = BingoTask.fromMenuItem(item).data;
+        MenuItem newItem = getUpdatedTaskItem(newData, true, newAmount)
                 .copyToSlot(item.getSlot());
         replaceItem(newItem, newItem.getSlot());
         selectItem(newItem, true);
@@ -81,8 +80,8 @@ public class TaskPickerMenu extends PaginatedSelectionMenu
             newAmount = Math.max(1, newAmount - by);
         }
 
-        TaskData newData = BingoTask.fromStack(item).data;
-        MenuItem newItem = new MenuItem(getUpdatedTaskItem(newData, !deselect, newAmount))
+        TaskData newData = BingoTask.fromMenuItem(item).data;
+        MenuItem newItem = getUpdatedTaskItem(newData, !deselect, newAmount)
                 .copyToSlot(item.getSlot());
         replaceItem(newItem, newItem.getSlot());
         selectItem(newItem, !deselect);
@@ -97,8 +96,8 @@ public class TaskPickerMenu extends PaginatedSelectionMenu
         BingoCardData cardsData = new BingoCardData();
         Set<TaskData> tasks = cardsData.lists().getTasks(listName, true, true);
 
-        for (MenuItem item : getItems()) {
-            TaskData itemData = BingoTask.fromStack(item).data;
+        for (MenuItem item : getAllItems()) {
+            TaskData itemData = BingoTask.fromMenuItem(item).data;
             TaskData savedTask = null;
             for (var t : tasks) {
                 if (t.isTaskEqual(itemData)) {
@@ -112,7 +111,7 @@ public class TaskPickerMenu extends PaginatedSelectionMenu
                 if (savedTask instanceof CountableTask countable)
                     count = countable.getCount();
 
-                MenuItem newItem = new MenuItem(getUpdatedTaskItem(itemData, true, count));
+                MenuItem newItem = getUpdatedTaskItem(itemData, true, count);
                 replaceItem(newItem, item);
                 selectItem(newItem, true);
             }
@@ -125,21 +124,21 @@ public class TaskPickerMenu extends PaginatedSelectionMenu
 
         BingoCardData cardsData = new BingoCardData();
         cardsData.lists().saveTasksFromGroup(listName,
-                getItems().stream().map(item -> BingoTask.fromStack(item).data).collect(Collectors.toList()),
-                getSelectedItems().stream().map(item -> BingoTask.fromStack(item).data).collect(Collectors.toList()));
+                getAllItems().stream().map(item -> BingoTask.fromMenuItem(item).data).collect(Collectors.toList()),
+                getSelectedItems().stream().map(item -> BingoTask.fromMenuItem(item).data).collect(Collectors.toList()));
     }
 
     public static List<MenuItem> asPickerItems(List<BingoTask> tasks) {
         List<MenuItem> result = new ArrayList<>();
         tasks.forEach(task -> {
-            MenuItem item = new MenuItem(getUpdatedTaskItem(task.data, false, 1));
+            MenuItem item = getUpdatedTaskItem(task.data, false, 1);
             item.setGlowing(false);
             result.add(item);
         });
         return result;
     }
 
-    private static ItemStack getUpdatedTaskItem(TaskData old, boolean selected, int newCount) {
+    private static MenuItem getUpdatedTaskItem(TaskData old, boolean selected, int newCount) {
         TaskData newData = old;
         if (selected) {
             if (newData instanceof CountableTask countable) {
@@ -148,27 +147,24 @@ public class TaskPickerMenu extends PaginatedSelectionMenu
         }
 
         BingoTask newTask = new BingoTask(newData);
-        var item = newTask.asStack();
+        MenuItem item = newTask.asMenuItem();
 
-        var meta = item.hasItemMeta() ? item.getItemMeta() : null;
-        if (meta != null)
-        {
-            List<String> addedLore;
-            if (selected)
-                addedLore = Arrays.stream(SELECTED_LORE)
-                        .map(ItemText::asLegacyString)
-                        .collect(Collectors.toList());
-            else
-                addedLore = Arrays.stream(UNSELECTED_LORE)
-                        .map(ItemText::asLegacyString)
-                        .collect(Collectors.toList());
-            List<String> newLore = new ArrayList<>();
-            newLore.add(newTask.data.getItemDescription()[0].asLegacyString());
-            newLore.addAll(addedLore);
+        String[] addedLore;
+        if (selected)
+            addedLore = Arrays.stream(SELECTED_LORE)
+                    .map(ItemText::asLegacyString)
+                    .toList().toArray(new String[]{});
+        else
+            addedLore = Arrays.stream(UNSELECTED_LORE)
+                    .map(ItemText::asLegacyString)
+                    .toList().toArray(new String[]{});
 
-            meta.setLore(newLore);
-            item.setItemMeta(meta);
-        }
+        String[] taskDescription = Arrays.stream(newTask.data.getItemDescription())
+                .map(ItemText::asLegacyString)
+                .toList().toArray(new String[]{});
+
+        item.setLore(taskDescription);
+        item.addDescription("selected", 5, addedLore);
         return item;
     }
 
